--- a/index.html
+++ b/index.html
@@ -1,11 +1,35 @@
-<<div style="display: flex; justify-content: center; font-size: 25px;">
+
+<style>
+.s1 {
+  width: 250px;
+  height: 250px;
+  font-size: 60px;
+  border: solid 10px;
+  border-radius: 65px;
+  cursor: pointer
+  }
+  .s2 {
+  width: 250px;
+  height: 250px;
+  font-size: 60px;
+  border: solid 10px;
+  border-radius: 65px;
+  cursor: not-allowed;
+  }
+</style>
+<div style="display: flex; justify-content: center; font-size: 25px;">
   <h1 style="
              border: solid;
              border-radius: 30px;
              border-width: 10px 10px 50px;
-             border-color: lightgrey black grey;
+             border-color: grey black grey;
              width: 500px;
              display: flex;
              justify-content: center;
              ">Finger Fights!</h1>
 </div>
+<div style="display: flex; justify-content: center;">
+<button class="s1" >Season 1<br/></button>
+  <h1 style="opacity: 3%;">john<br/>pork</h1>
+  <button class="s2">Season 2<p style="font-size: 2px;"<br/><span style="font-size: 15px;"><strong><i>coming later this shcool year</i></strong></span></button>
+  </div>
